// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package file applies preview bump bumps multi js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with branch-name.12345 identifier to publish a preview",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with branch-name.12345 identifier to publish a preview",
    ],
    Array [
      "bumping all with branch-name.12345 identifier to publish a preview",
    ],
  ],
}
`;

exports[`package file applies preview bump bumps single js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-json-fixture with branch-name.12345 identifier to publish a preview",
    ],
  ],
}
`;

exports[`package file applies preview bump to pre-release bumps multi js json without pre-release 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with branch-name.12345 identifier to publish a preview",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with branch-name.12345 identifier to publish a preview",
    ],
    Array [
      "bumping all with branch-name.12345 identifier to publish a preview",
    ],
  ],
}
`;

exports[`package file applies preview bump to pre-release bumps single js json without pre-release 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-prerelease-json-fixture with branch-name.12345 identifier to publish a preview",
    ],
  ],
}
`;
